[dyad] Corrección del nombre del paquete de la aplicación para el inicio de sesión - wrote 4 file(s), renamed 1 file(s)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="app_name">Calorel</string>
     <string name="title_activity_main">Calorel</string>
-    <string name="package_name">com.calorel.app</string>
-    <string name="custom_url_scheme">com.calorel.app</string>
+    <string name="package_name">com.calorelapp.app</string>
+    <string name="custom_url_scheme">com.calorelapp.app</string>
     <!-- IMPORTANTE: Este debe ser el Client ID de TIPO WEB, no el de Android -->
     <string name="server_client_id">733617800360-gdfv4o8j13anns76lj1hmf64deeuo8iq.apps.googleusercontent.com</string>
 </resources>
