[dyad] Mejorando la claridad de los mensajes de límite de uso de IA para especificar si son diarios o semanales. - wrote 9 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,6 +8,8 @@
     "retry": "Retry",
     "cancel": "Cancel",
     "error_friendly": "Something went wrong. Please check your connection and try again.",
-    "ai_limit_reached": "AI Limit Reached"
+    "ai_limit_reached": "AI Limit Reached",
+    "ai_limit_daily_desc": "You have reached the daily limit of {limit} uses for this feature. Please come back tomorrow to continue.",
+    "ai_limit_weekly_desc": "You have reached the weekly limit of {limit} uses for this feature. Please come back next week to continue."
   },
 // ... (rest of the file)
