--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,4 +12,12 @@
     "ai_limit_daily_desc": "You have reached the daily limit of {limit} uses for this feature. Please come back tomorrow to continue.",
     "ai_limit_weekly_desc": "You have reached the weekly limit of {limit} uses for this feature. Please come back next week to continue."
   },
-// ... (rest of the file)
+  "login": {
+    "welcome": "Welcome to Calorel",
+    "subtitle": "Your smart health companion.",
+    "google_button": "Continue with Google",
+    "terms_privacy": "By continuing, you agree to our <1>Terms of Service</1> and <3>Privacy Policy</3>.",
+    "error_toast_title": "Sign-In Error",
+    "error_toast_desc": "Could not connect to Google. Please try again."
+  }
+}
