--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -163,10 +163,12 @@
     "health_score_good": "Good",
     "health_score_fair": "Fair",
     "health_score_improvable": "Improvable",
-    "water_tracker_glasses": "{{goal}} glasses goal",
+    "water_tracker_glasses": "{{goal}} oz goal",
+    "water_tracker_title": "oz",
     "todays_analysis": "Today's Log",
     "no_data": "No entries yet.",
-    "start_logging": "Tap the '+' button to log your first meal or exercise."
+    "start_logging": "Tap the '+' button to log your first meal or exercise.",
+    "log_water_title": "Log Water"
   },
   "bottom_nav": {
     "home": "Home",
@@ -534,8 +536,8 @@
     "workouts_label": "Weekly Workouts",
     "workouts_per_week": "per week",
     "workouts_light": "Light (1-2)",
-    "workouts_moderate": "Moderate (3-4)",
-    "workouts_active": "Active (5-6)",
+    "workouts_moderate": "Moderado (3-4)",
+    "workouts_active": "Activo (5-6)",
     "workouts_very_active": "Very Active (7+)",
     "goal_weight_label": "Goal Weight",
     "rate_label": "Weekly Rate",
