--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -105,6 +105,12 @@
       "balanced_desc": "Tasa equilibrada. Efectiva y manejable para la mayoría de las personas.",
       "week": "semana"
     },
+    "notifications": {
+      "title": "Mantén la Constancia",
+      "description": "Activa las notificaciones para recibir recordatorios de comidas, hidratación y control de peso. ¡Te ayudará a no perder el ritmo!",
+      "enable_button": "Activar Notificaciones",
+      "skip_button": "Quizás más tarde"
+    },
     "final": {
       "title": "¿Listo para empezar?",
       "description": "Calorel utiliza IA para ayudarte a alcanzar tus objetivos de forma más rápida y sostenible.",
@@ -301,7 +307,7 @@
     "underweight": "Bajo Peso",
     "healthy": "Saludable",
     "overweight": "Sobrepeso",
-    "obesity": "Obesidad",
+    "obesity": "Obesity",
     "incomplete_data": "Completa tu altura y peso en ajustes para calcular tu IMC.",
     "tooltip": "El Índice de Masa Corporal (IMC) es una medida utilizada para detectar categorías de peso que pueden conducir a problemas de salud. Se calcula dividiendo el peso por el cuadrado de la altura. Es una estimación y no debe usarse como único indicador de salud."
   },
@@ -631,28 +637,9 @@
     "next": "Siguiente"
   },
   "notifications": {
-    "food_title": "🍽️ Registro de comidas",
-    "food_body_1": "📸 Escanea tu comida y conoce sus calorías.",
-    "food_body_2": "⏱️ Solo toma 5 segundos registrar tu comida.",
-    "food_title_3": "🍽️ Hora de comer",
-    "food_body_3": "📸 ¿Qué hay en tu plato hoy? Escanéalo rápido.",
-    "dinner_title_1": "🌙 Hora de la cena",
-    "dinner_body_1": "🍽️ No olvides registrar tu última comida del día.",
-    "dinner_title_2": "📝 Cierra tu día",
-    "dinner_body_2": "✅ Tómate un momento para registrar tu cena antes de descansar.",
-    "dinner_title_3": "🥗 Registro nocturno",
-    "dinner_body_3": "📸 ¿Qué cenaste hoy? Regístralo en segundos.",
-    "water_title_1": "💧 Hidratación",
-    "water_body_1": "💧 Hora de tomar un vaso de agua.",
-    "water_title_2": "🚰 Hábito saludable",
-    "water_body_2": "🚰 Mantente hidratado para mejores resultados.",
-    "water_title_3": "💦 Tu cuerpo",
-    "water_body_3": "💦 Tu cuerpo te lo agradecerá. Bebe un poco de agua.",
-    "weight_title_1": "⚖️ Control de peso",
-    "weight_body_1": "⚖️ ¿Quieres actualizar tu peso hoy? Solo toma un momento.",
-    "weight_title_2": "📊 Tu Progreso",
-    "weight_body_2": "📊 Revisa tu progreso de esta semana.",
-    "weight_title_3": "📈 Avanzando",
-    "weight_body_3": "📈 Cada registro cuenta, sigue avanzando hacia tu meta."
+    "title": "Mantén la Constancia",
+    "description": "Activa las notificaciones para recibir recordatorios de comidas, hidratación y control de peso. ¡Te ayudará a no perder el ritmo!",
+    "enable_button": "Activar Notificaciones",
+    "skip_button": "Quizás más tarde"
   }
 }
