[dyad] Implementada recuperación de contraseña con diálogo y envío de email. - wrote 4 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -20,6 +20,11 @@
     "sign_in_button": "Sign In",
     "sign_up_button": "Create Account",
     "forgot_password": "Forgot your password?",
+    "reset_password_title": "Reset Password",
+    "reset_password_desc": "Enter your email address and we will send you a link to reset your password.",
+    "send_reset_link": "Send Link",
+    "reset_link_sent": "Email Sent",
+    "reset_link_sent_desc": "If an account exists with that email, you will receive instructions shortly.",
     "reset_password_button": "Send reset instructions",
     "update_password_button": "Update Password",
     "no_account": "Don't have an account?",
@@ -548,9 +553,9 @@
     "subtitle": "Adjust your daily targets. Changes are saved automatically.",
     "calories": "Calories",
     "protein": "Protein",
-    "carbs": "Carbs",
-    "fats": "Fats",
-    "sugars": "Sugars",
+    "carbs": "Carbohidratos",
+    "fats": "Grasas",
+    "sugars": "Azúcares",
     "save_error": "Failed to save goals.",
     "ai_suggestions": "AI Suggestions"
   },
@@ -638,28 +643,9 @@
     "next": "Next"
   },
   "notifications": {
-    "food_title": "🍽️ Meal Log",
-    "food_body_1": "📸 Scan your food and know its calories.",
-    "food_body_2": "⏱️ It only takes 5 seconds to log your meal.",
-    "food_title_3": "🍽️ Meal Time",
-    "food_body_3": "📸 What's on your plate? Scan it fast.",
-    "dinner_title_1": "🌙 Dinner Time",
-    "dinner_body_1": "🍽️ Don't forget to log your last meal of the day.",
-    "dinner_title_2": "📝 Close Your Day",
-    "dinner_body_2": "✅ Take a moment to log your dinner before resting.",
-    "dinner_title_3": "🥗 Night Log",
-    "dinner_body_3": "📸 What did you have for dinner? Log it in seconds.",
-    "water_title_1": "💧 Hydration",
-    "water_body_1": "💧 Time to drink a glass of water.",
-    "water_title_2": "🚰 Healthy Habit",
-    "water_body_2": "🚰 Stay hydrated for better results.",
-    "water_title_3": "💦 Your Body",
-    "water_body_3": "💦 Your body will thank you. Drink some water.",
-    "weight_title_1": "⚖️ Weight Control",
-    "weight_body_1": "⚖️ Want to update your weight today? It takes a moment.",
-    "weight_title_2": "📊 Your Progress",
-    "weight_body_2": "📊 Check your progress for this week.",
-    "weight_title_3": "📈 Moving Forward",
-    "weight_body_3": "📈 Every log counts, keep moving towards your goal."
+    "title": "Mantén la Constancia",
+    "description": "Activa las notificaciones para recibir recordatorios de comidas, hidratación y control de peso. ¡Te ayudará a no perder el ritmo!",
+    "enable_button": "Activar Notificaciones",
+    "skip_button": "Quizás más tarde"
   }
 }
