--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -20,6 +20,11 @@
     "sign_in_button": "Iniciar Sesión",
     "sign_up_button": "Crear Cuenta",
     "forgot_password": "¿Olvidaste tu contraseña?",
+    "reset_password_title": "Recuperar Contraseña",
+    "reset_password_desc": "Ingresa tu correo electrónico y te enviaremos un enlace para restablecer tu contraseña.",
+    "send_reset_link": "Enviar enlace",
+    "reset_link_sent": "Correo enviado",
+    "reset_link_sent_desc": "Si existe una cuenta con ese correo, recibirás instrucciones en breve.",
     "reset_password_button": "Enviar instrucciones de restablecimiento",
     "update_password_button": "Actualizar Contraseña",
     "no_account": "¿No tienes una cuenta?",
