[dyad] Se ha añadido un pequeño aviso legal al formulario de entrada manual de alimentos para informar que los resultados son generados por IA. - wrote 3 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -234,7 +234,8 @@
     "portion_medium": "Medium",
     "portion_large": "Large",
     "submit": "Analyze & Save",
-    "error_analysis": "Failed to analyze food. Please check the description."
+    "error_analysis": "Failed to analyze food. Please check the description.",
+    "ai_disclaimer": "Note: Nutritional values are AI-generated estimates."
   },
   "exercise": {
     "title": "Log Exercise",
