[dyad] He añadido la funcionalidad de "Escanear Menú". Esto incluye un nuevo botón en la navegación inferior que abre la cámara con una superposición específica para menús (más grande y con líneas guía) en el componente `Viewfinder`. También he actualizado las traducciones correspondientes. - wrote 5 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -189,18 +189,19 @@
     "diets": "Diets",
     "log_title": "Log Activity",
     "scan_food": "Scan Food",
+    "scan_menu": "Scan Menu",
     "log_exercise": "Log Exercise"
   },
   "scanner": {
     "starting": "Starting camera...",
-    "processing": "Analyzing food...",
+    "processing": "Analyzing...",
     "retake": "Retake",
     "retry": "Retry",
     "error_camera_title": "Camera Access Denied",
     "error_camera_desc": "Please grant camera permissions in your device settings.",
     "error_analysis": "Analysis Failed",
     "help_title": "How to Scan",
-    "help_desc": "Point the camera at your food. Ensure good lighting and a clear view of the entire dish for the best nutritional analysis.",
+    "help_desc": "Point the camera at your food or menu. Ensure good lighting and a clear view for the best AI analysis.",
     "flash_unavailable": "Flash/Torch is unavailable on this device or camera.",
     "disclaimer_title": "Disclaimer",
     "disclaimer_text": "The results from this scanner are AI-based estimations. They may not be 100% accurate and should not be considered medical advice.",
