--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -188,6 +188,7 @@
     "diets": "Dietas",
     "log_title": "Registrar Actividad",
     "scan_food": "Escanear Comida",
+    "scan_menu": "Escanear Menú",
     "log_exercise": "Registrar Ejercicio"
   },
   "scanner": {
